ChangeLog:

nx-X11-3.3.0-5

- Fixed TR01G02163. Signals need to be blocked before the call to
  fork() in the Popen() utility.
 
- Fixed TR01G02164. Trapezoid data need to be validated before use.
  This issue was the same of CVE-2007-2437.

nx-X11-3.3.0-4

- Enabled the code resetting the Xlib buffer if an IO error occured.

nx-X11-3.3.0-3

- Fixed the search path for the XKB base directory.

nx-X11-3.3.0-2

- Fixed TR10F02116. The X11 agent could enter an indefinite wait state
  if connection to X display is broken and libX11 output buffer is not
  empty.

nx-X11-3.3.0-1

- Opened the 3.3.0 branch based on nx-X11-3.2.0-2.

nx-X11-3.2.0-2

- Imported patch fixing issues from  X.Org security advisory, June
  11th, 2008: Multiple vulnerabilities in X server extensions. CVE
  IDs: CVE-2008-1377, CVE-2008-1379, CVE-2008-2360, CVE-2008-2361,
  CVE-2008-2362.

nx-X11-3.2.0-1

- Opened the 3.2.0 branch based on nx-X11-3.1.0-6.

nx-X11-3.1.0-6

- Modified Xserver Imakefile to link the Xfixes library.

nx-X11-3.1.0-5

- Disabled the terminate action, just in case the TerminateServer
  symbol is binded to a non default key sequence.

nx-X11-3.1.0-4

- Imported patch fixing issues from  X.Org security advisory, January
  17th, 2008: Multiple vulnerabilities in the X server.  CVE IDs:
  CVE-2007-5760    CVE-2007-5958    CVE-2007-6427   CVE-2007-6428
  CVE-2007-6429    CVE-2008-0006.

nx-X11-3.1.0-3

- Moved a variable definition placed in _mesa_make_current().

nx-X11-3.1.0-2

- Fixed TR10E01924. A crash could occur in _mesa_make_current().

- Initialized after_ret variable in _XcmsGetProperty().

nx-X11-3.1.0-1

- Opened the 3.1.0 branch based on nx-X11-3.0.0-37.

nx-X11-3.0.0-37

- Changed the Xserver Imakefile to link against Xcomposite on the
  Cygwin platform too.

nx-X11-3.0.0-36

- Fixed TR07E01806. Modified host.def to build GLX code with symbol
  __GLX_ALIGN64 defined on Solaris platform.

nx-X11-3.0.0-35
